# jaggedcpp

./: .gitignore  CMakeLists.txt  Jagged.h  LICENSE  Makefile  README.md  awkward.h
.github/: sanad.lock.json
.github/workflows/: build.yml
cmake/: jaggedcppConfig.cmake.in
docs/: awkward-compatibility.md  migrating-from-jagged-array.md
examples/: CMakeLists.txt  JaggedArray.cpp  basic.cpp  boolean_fancy.cpp  concanate.cpp  drop_none.cpp  fill_none.cpp  is_none.cpp  mask.cpp  optional.cpp  pad_none.cpp  reduction.cpp  sort.cpp  stat.cpp
include/awkward/: array.hpp  awkward.hpp  buffers.hpp  builder.hpp  index.hpp  kernels.hpp  operations.hpp  strings.hpp  types.hpp  value.hpp
include/awkward/contents/: content.hpp  detail.hpp  empty_array.hpp  indexed_array.hpp  list_array.hpp  list_offset_array.hpp  list_offset_content_array.hpp  numpy_array.hpp  option_array.hpp  record_array.hpp  regular_array.hpp  regular_content_array.hpp  string_array.hpp  union_array.hpp
include/jagged/: array.hpp  jagged.hpp
scripts/: amalgamate.py  generate_awkward_goldens.py
tests/: CMakeLists.txt  run_downstream.cmake.in  test_awkward_broadcasting.cpp  test_awkward_buffers.cpp  test_awkward_builder.cpp  test_awkward_concurrency.cpp  test_awkward_indexing.cpp  test_awkward_invariants.cpp  test_awkward_layout.cpp  test_awkward_missing.cpp  test_awkward_records.cpp  test_awkward_reducers.cpp  test_awkward_strings.cpp  test_core.cpp  test_operations.cpp  test_optional.cpp
tests/downstream/: CMakeLists.txt  main.cpp
